--- a/style.css
+++ b/style.css
@@ -23,6 +23,12 @@ h1 {
     min-height: 200px;
     text-align: center;
   }
+
+  .greeting {
+    text-align: center;
+    padding-bottom: 30px;
+    }
+  
 .video-container{
 display: flex;
 flex-direction: column;
